--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </div>
     </section>
     <section class="digits">
-      <h2 class="section-title digits__title">Цифры и факты</h2>
-      <p class="section-subtitle digits__subtitle">Про учёбу и мозг</p>
-      <div class="digits__table">
+      <h2 class="section-title">Цифры и факты</h2>
+      <p class="section-subtitle">Про учёбу и мозг</p>
+      <div class="table">
         <div class="table__cell">
           <h3 class="table__heading">86 миллиардов</h3>
           <p class="table__text">Число нейронов в мозге человека</p>
@@ -75,8 +75,66 @@
           <p class="table__text">Открытие условного рефлекса</p>
         </div>
       </div>
-
     </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a href="#" class="feynman__link">Подробнее →</a>
+    </section>
+    <section class="kaufman">
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+      <img src="images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
+      <div class="table table_theme_dark">
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">1</h3>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">2</h3>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">3</h3>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">4</h3>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">5</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.
+          </p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__head table__heading_theme_darking">6</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__hea table__heading_theme_darkding">7</h3>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__hea table__heading_theme_darkding">8</h3>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__hea table__heading_theme_darkding">9</h3>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+          </p>
+        </div>
+        <div class="table__cell table__cell_theme_dark">
+          <h3 class="table__hea table__heading_theme_darkding">10</h3>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__columns">
+        .footer__columns
+      </div>
+    </footer>
   </div>
 </body>
 
