--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__head table__heading_theme_darking">6</h3>
-          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <p class="table__text table__text_theme_dark">Устраните преятствия для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme_dark">
           <h3 class="table__hea table__heading_theme_darkding">7</h3>
@@ -132,7 +132,39 @@
     </section>
     <footer class="footer">
       <div class="footer__columns">
-        .footer__columns
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <p class="footer__column-heading">О Практикуме</p>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">Главная</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Концепция</>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <p class="footer__column-heading">Соцсети</p>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграмм" class="footer__social-icon">Instagram</a>
+            </li>
+          </ul>
+
+        </div>
       </div>
     </footer>
   </div>
