fixes after autotest

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <a href="#" class="footer__column-link">Главная</a>
             </li>
             <li>
-              <a href="#" class="footer__column-link">Концепция</>
+              <a href="#" class="footer__column-link">Концепция</a>
             </li>
             <li>
               <a href="#" class="footer__column-link">Наставники</a>
