--- a/index.html
+++ b/index.html
@@ -51,50 +51,66 @@
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-        <div class="table">
-          <div class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text">
-              Число нуждающихся в повышении квалификации
-            </p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">
-              Число ответственных за обучение нервных синапсов у взрослого
-              человека
-            </p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">
-              Число взрослых людей моложе 25 лет, не имеющих образования для
-              трудоустройства
-            </p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
-            <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
-            <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+        <ul class="table">
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -109,68 +125,88 @@
           от Джоша Кауфмана
         </p>
         <div class="kaufman__triangle"></div>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <p class="table__text table__text_theme_dark">
-              Выберите привлекательный проект.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="table__text table__text_theme_dark">
-              Сосредоточьтесь на каком-то одном навыке.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="table__text table__text_theme_dark">
-              Определите целевой уровень мастерства.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="table__text table__text_theme_dark">
-              Разбейте навык на элементы.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="table__text table__text_theme_dark">
-              Приготовьте всё необходимое для занятий.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__head table__heading_theme_darking">6</h3>
-            <p class="table__text table__text_theme_dark">
-              Устраните преятствия для занятий.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__hea table__heading_theme_darkding">7</h3>
-            <p class="table__text table__text_theme_dark">
-              Выделите специальное время для занятий.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__hea table__heading_theme_darkding">8</h3>
-            <p class="table__text table__text_theme_dark">
-              Создайте быстрые петли обратной связи.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__hea table__heading_theme_darkding">9</h3>
-            <p class="table__text table__text_theme_dark">
-              Занимайтесь по расписанию, короткими интенсивными интервалами.
-            </p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__hea table__heading_theme_darkding">10</h3>
-            <p class="table__text table__text_theme_dark">
-              Уделяйте внимание количеству и скорости.
-            </p>
-          </div>
-        </div>
+        <ul class="table table_theme_dark">
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">
+                Разбейте навык на элементы.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__head table__heading_theme_darking">6</h3>
+              <p class="table__text table__text_theme_dark">
+                Устраните преятствия для занятий.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__hea table__heading_theme_darkding">7</h3>
+              <p class="table__text table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__hea table__heading_theme_darkding">8</h3>
+              <p class="table__text table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__hea table__heading_theme_darkding">9</h3>
+              <p class="table__text table__text_theme_dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__hea table__heading_theme_darkding">10</h3>
+              <p class="table__text table__text_theme_dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </div>
+          </li>
+        </ul>
       </section>
       <footer class="footer">
         <div class="footer__columns">
