fix after autotests

--- a/index.html
+++ b/index.html
@@ -92,19 +92,21 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="1280" height="720"
-            src="https://www.youtube.com/embed/arj7oStGLkU" title="Tim Urban:
-            Inside the mind of a master procrastinator | TED"
-            Inside the mind of a master procrastinator | TED" frameborder="0"
+          <iframe
+            class="video__iframe"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+            title="Tim Urban: Inside the mind of a master procrastinator | TED"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-            gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="1280" height="720"
-            src="https://www.youtube.com/embed/5MgBikgcWnY" title="The first 20
-            hours -- how to learn anything | Josh Kaufman | TEDxCSU"
-            allow="accelerometer; autoplay; clipboard-write;
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write;>>>>>>>
-            b75f58947e59af0c14ff4d64a09144927729409b
-            encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe
+            class="video__iframe"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="The first 20 hours -- how to learn anything | Josh Kaufman |
+            TEDxCSU"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+            gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
