fix after autotest2

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           </li>
           <li>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__head table__heading_theme_darking">6</h3>
+              <h3 class="table__heading table__heading_theme_darking">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните преятствия для занятий.
               </p>
@@ -274,7 +274,7 @@
           </li>
           <li>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__hea table__heading_theme_darkding">7</h3>
+              <h3 class="table__heading table__heading_theme_darkding">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
@@ -282,7 +282,7 @@
           </li>
           <li>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__hea table__heading_theme_darkding">8</h3>
+              <h3 class="table__heading table__heading_theme_darkding">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
@@ -290,7 +290,7 @@
           </li>
           <li>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__hea table__heading_theme_darkding">9</h3>
+              <h3 class="table__heading table__heading_theme_darkding">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
@@ -298,7 +298,7 @@
           </li>
           <li>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__hea table__heading_theme_darkding">10</h3>
+              <h3 class="table__heading table__heading_theme_darkding">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
               </p>
